# rs-puff

./: .gitignore  AGENTS.md  Cargo.toml  README.md
examples/: basic.rs
src/: client.rs  error.rs  filter.rs  lib.rs  namespace.rs  params.rs  rank_by.rs  responses.rs
src/types/: distance_metric.rs  id.rs  mod.rs  row.rs  vector_encoding.rs
tests/: integration.rs
