[package]
name = "puff-rs"
version = "0.1.0"
edition = "2024"
description = "A modern Rust client for Turbopuffer"
license = "MIT"
repository = "https://github.com/lucasgelfond/puff-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
