[package]
name = "rs-puff"
version = "0.1.1"
edition = "2024"
description = "A modern (unofficial) Rust client for Turbopuffer"
license = "MIT"
repository = "https://github.com/lucasgelfond/rs-puff"
readme = "README.md"
keywords = ["turbopuffer", "vector-database", "embeddings", "search", "async"]
categories = ["api-bindings", "database"]
authors = ["Lucas Gelfond"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/default-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "http2"] }
thiserror = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
serial_test = "3"
